LoginPage, ConfigProperties, auth at ok.ru.

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.13.0'
 }
+//TODO создание файла с логином и паролем
