User object, new pages, webdriver factory, change personal data test.

--- a/src/test/resources/config-example.properties
+++ b/src/test/resources/config-example.properties
@@ -3,3 +3,4 @@ login=yourLogin
 password=yourPassword
 chromedriver=/home/user/chromedriver
 geckodriver=C:/Documents/geckodriver.exe
+implicitlyWaitTimeSec=5
