New tests and browser drivers.

--- a/src/test/resources/config-example.properties
+++ b/src/test/resources/config-example.properties
@@ -3,4 +3,9 @@ login=yourLogin
 password=yourPassword
 chromedriver=/home/user/chromedriver
 geckodriver=C:/Documents/geckodriver.exe
+iedriver=C:/Documents/IEDriverServer.exe
+edgedriver=C:/Documents/MicrosoftWebDriver.exe
 implicitlyWaitTimeSec=5
+
+# chrome, firefox, ie, edge
+useBrowser=firefox
